--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
     "next": "14.2.2",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.13.3",
