--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
     "next": "14.2.2",
+    "openai": "^4.85.1",
     "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
